# twvm

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  constants.cc  constants.h  decoder.cc  decoder.h  executor.cc  executor.h  loader.cc  loader.h  module.cc  module.h  opcode.cc  opcode.h  package-lock.json  package.json  twvm  twvm.cc  types.cc  types.h  util.cc  util.h  utilities.h
.github/workflows/: ccpp.yml
assets/: settings.json
lib/: CMakeLists.txt  cache.cc  cache.h  cmdline.cc  cmdline.h  compiler.cc  compiler.h  config.cc  config.h  constants.h  decoder.cc  decoder.h  exception.cc  exception.h  executor.cc  executor.h  frames.h  inspector.cc  inspector.h  instances.h  instantiator.cc  instantiator.h  interpreter.cc  interpreter.h  jit_compiler.cc  loader.cc  loader.h  module.cc  module.h  opcode.cc  opcode.h  opcodes.h  options.cc  reader.cc  reader.h  repl.cc  repl.h  stack.cc  stack.h  state.cc  (+8 more)
lib/common/: bits.h  constants.h  errors.h  macros.h  opcode.h
lib/include/: constants.h  constants.hh  decoder.hh  errors.h  exception.hh  executor.hh  instantiator.hh  interpreter.hh  jit_compiler.hh  loader.hh  macros.h  opcodes.hh  options.hh  reader.hh  state.hh  structs.hh  util.hh
lib/instances/: ins-module.h  ins-section-export.h  ins-section-func.h  ins-section-global.h  ins-section-memory.h  ins-section-table.h  ins-wasm.h
lib/structures/: CMakeLists.txt  struct-frames.cc  struct-frames.h  struct-module.h  struct-stack.h  struct-store.h
scripts/: build.sh  check-circular-deps.py  deps-relationship
src/: cache.cc  cache.h  cmdline.cc  cmdline.h  compiler.cc  constants.cc  constants.h  decoder.cc  decoder.h  executor.cc  executor.h  frames.h  inspector.cc  inspector.h  instances.h  instantiator.cc  instantiator.h  loader.cc  loader.h  macros.h  module.cc  module.h  opcode.cc  opcode.h  stack.cc  stack.h  store.cc  store.h  twvm.cc  twvm.h  type.h  types.cc  types.h  utilities.cc  utilities.h  utility.cc  utility.h  utils.cc  utils.h
src/include/: constants.h  macros.h
test/: function-add.wasm  gtest.cc  twvm
tests/: README.md  gtest.cc  gtest_all.cc  gtest_arithmetic.cc  gtest_control.cc  gtest_convert.cc  gtest_memory.cc  gtest_misc.cc  gtest_others.cc  gtest_shift.cc  macros.h  twvm
tests/modules/: abs.wasm  block.wasm  br.wasm  br_if.wasm  br_if_unreachable.wasm  br_table.wasm  call_indirect.wasm  clz.wasm  copysign.wasm  ctz.wasm  dead-loop.wasm  div_s.wasm  drop.wasm  else.wasm  eqz.wasm  export.wasm  f32_abs.wasm  f32_add.wasm  f32_ceil.wasm  f32_convert_i32_s.wasm  f32_convert_i32_u.wasm  f32_convert_i64_s.wasm  f32_convert_i64_u.wasm  f32_copysign.wasm  f32_demote_f64.wasm  f32_div.wasm  f32_eq.wasm  f32_floor.wasm  f32_le.wasm  f32_load_store.wasm  f32_max.wasm  f32_min.wasm  f32_mul.wasm  f32_ne.wasm  f32_nearest.wasm  f32_neg.wasm  f32_reinterpret_i32.wasm  f32_sqrt.wasm  f32_sub.wasm  f32_trunc.wasm  (+157 more)
